--- a/BrandOSv1.0/backend/package.json
+++ b/BrandOSv1.0/backend/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dayjs": "^1.11.11",
@@ -18,6 +19,7 @@
     "openai": "^4.52.2",
     "pg": "^8.11.5",
     "uuid": "^9.0.1",
+    "winston": "^3.17.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
